test_scores/negative_dimers/features/Q9P2W9.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9P2W9.pkl.xz